--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net/' }
+        maven { url "https://repo.spongepowered.org/repository/maven-public/" }
         jcenter()
         mavenCentral()
         gradlePluginPortal()
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
     }
 }
 
@@ -19,6 +22,8 @@ repositories {
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
+apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 
 version = "1.12.2-1.0.0"
@@ -53,6 +58,14 @@ minecraft {
         }
     }
 }
+mixin {
+    add sourceSets.main, "mixins.fbiomes.refmap.json"
+}
+
+repositories {
+    maven { url = 'https://repo.spongepowered.org/maven' }
+}
+
 
 configurations {
     embed
@@ -62,6 +75,8 @@ configurations {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
 	implementation "curse.maven:atlas-463826:3816069"
+    implementation "org.spongepowered:mixin:0.8"
+    implementation "io.github.llamalad7:mixinextras-common:0.4.1"
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -73,12 +88,34 @@ jar {
                 "Specification-Version": "1", // We are version 1 of ourselves
                 "Implementation-Title": project.name,
                 "Implementation-Version": "${version}",
-                "Implementation-Vendor" :"smileycorp",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Implementation-Vendor":"smileycorp",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "ForceLoadAsMod": true,
+                //"FMLAT": "crossbows_at.cfg",
+                "FMLCorePluginContainsFMLMod": true,
+                "TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
+                "MixinConfigs": "mixins.crossbows.json"
         ])
 
     }
 }
+
+shadowJar {
+    classifier = ''
+    exclude 'LICENSE.txt'
+    dependencies {
+        include(dependency("org.spongepowered:mixin:0.8"))
+        include(dependency("io.github.llamalad7:mixinextras-common:0.4.1"))
+    }
+}
+
+build.dependsOn(shadowJar)
+
+reobf {
+    shadowJar {}
+}
+
+build.dependsOn(reobf)
 
 processResources {
     inputs.property "version", project.version
