--- a/build.gradle
+++ b/build.gradle
@@ -74,8 +74,9 @@ configurations {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
-	implementation "curse.maven:atlas-463826:3816069"
+	//implementation "curse.maven:atlas-463826:3816069"
     implementation "org.spongepowered:mixin:0.8"
+	implementation files("libs/Atlas-Lib-1.12.2-1.1.6.jar")
     implementation "io.github.llamalad7:mixinextras-common:0.4.1"
 }
 
@@ -91,10 +92,10 @@ jar {
                 "Implementation-Vendor":"smileycorp",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 "ForceLoadAsMod": true,
-                //"FMLAT": "crossbows_at.cfg",
+                //"FMLAT": "fbiomes_at.cfg",
                 "FMLCorePluginContainsFMLMod": true,
                 "TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
-                "MixinConfigs": "mixins.crossbows.json"
+                "MixinConfigs": "mixins.fbiomes.json"
         ])
 
     }
@@ -106,6 +107,7 @@ shadowJar {
     dependencies {
         include(dependency("org.spongepowered:mixin:0.8"))
         include(dependency("io.github.llamalad7:mixinextras-common:0.4.1"))
+		exclude(dependency(files("libs/Atlas-Lib-1.12.2-1.1.6.jar")))
     }
 }
 
