--- a/build.gradle
+++ b/build.gradle
@@ -76,9 +76,10 @@ configurations {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
-	implementation "curse.maven:atlas-463826:5877784"
+	//implementation "curse.maven:atlas-463826:5877784"
     implementation "org.spongepowered:mixin:0.8"
     implementation "io.github.llamalad7:mixinextras-common:0.4.1"
+    implementation files("libs/Atlas-Lib-1.12.2-1.1.7.jar")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
