add bioluminescence particles

--- a/src/main/resources/mixins.fbiomes.json
+++ b/src/main/resources/mixins.fbiomes.json
@@ -3,7 +3,7 @@
   "package": "net.smileycorp.fbiomes.mixin",
   "refmap": "mixins.fbiomes.refmap.json",
   "mixins": [
-
+    "MixinPotionEffect"
   ],
   "client": [
   ],
