--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation "org.spongepowered:mixin:0.8"
     implementation "io.github.llamalad7:mixinextras-common:0.4.1"
     implementation files("libs/Atlas-Lib-1.12.2-1.1.7.jar")
+    implementation "curse.maven:jei-238222:4393461"
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
