fix mobs spawning in enchanted thicket

--- a/src/main/resources/mixins.fbiomes.json
+++ b/src/main/resources/mixins.fbiomes.json
@@ -4,7 +4,8 @@
   "refmap": "mixins.fbiomes.refmap.json",
   "mixins": [
     "MixinEntityLivingBase",
-    "MixinPotionEffect"
+    "MixinPotionEffect",
+    "MixinWorldEntitySpawner"
   ],
   "client": [
   ],
