add main effect

--- a/src/main/resources/mixins.fbiomes.json
+++ b/src/main/resources/mixins.fbiomes.json
@@ -5,9 +5,11 @@
   "mixins": [
     "MixinEntityLivingBase",
     "MixinPotionEffect",
+    "MixinPotionUtils",
     "MixinWorldEntitySpawner"
   ],
   "client": [
+    "MixinWorld"
   ],
   "server": []
 }
